Second full scene copy crashes on deletion #57372

Closed
opened 2018-10-24 15:17:22 +02:00 by Bastien Montagne · 3 comments

Current Blender2.8 branch.

  • Add a full copy of a scene
  • Add a full copy of the first copied scene.

Delete that second copy.

Related/reported in #57361.

Again an issue of CollectionChild having NULL collection pointer...

1   layer_collection_sync                             layer.c              651  0x558966ad2647 
2   layer_collection_sync                             layer.c              656  0x558966ad26f1 
3   BKE_layer_collection_sync                         layer.c              783  0x558966ad367e 
4   BKE_scene_collection_sync                         layer.c              816  0x558966ad3a5f 
5   BKE_main_collection_sync                          layer.c              828  0x558966ad3ae5 
6   BKE_main_collection_sync_remap                    layer.c              853  0x558966ad3dd1 
7   BKE_collections_child_remove_nulls                collection.c         682  0x55896666f0cd 
8   libblock_remap_data_postprocess_collection_update library_remap.c      337  0x55896688a06a 
9   BKE_libblock_relink_ex                            library_remap.c      637  0x55896688b92b 
10  BKE_libblock_free_ex                              library_remap.c      925  0x55896688c749 
11  BKE_libblock_free                                 library_remap.c      953  0x55896688c83e 
12  ED_scene_delete                                   scene_edit.c         117  0x5589651343f9 
13  scene_delete_exec                                 scene_edit.c         244  0x558965134bf1 
14  wm_operator_invoke                                wm_event_system.c    1333 0x55896424b02c 
15  wm_operator_call_internal                         wm_event_system.c    1530 0x55896424c015 
16  WM_operator_name_call_ptr                         wm_event_system.c    1578 0x55896424c2a4 
17  ui_apply_but_funcs_after                          interface_handlers.c 767  0x558964a56142 
18  ui_handler_region_menu                            interface_handlers.c 9793 0x558964a9f341 
19  wm_handler_ui_call                                wm_event_system.c    569  0x558964245448 
20  wm_handlers_do_intern                             wm_event_system.c    2386 0x558964251521 
... <plus>                                                                                     
Current Blender2.8 branch. - Add a full copy of a scene - Add a full copy of the first copied scene. # Delete that second copy. Related/reported in #57361. Again an issue of CollectionChild having NULL collection pointer... ```lines=10 1 layer_collection_sync layer.c 651 0x558966ad2647 2 layer_collection_sync layer.c 656 0x558966ad26f1 3 BKE_layer_collection_sync layer.c 783 0x558966ad367e 4 BKE_scene_collection_sync layer.c 816 0x558966ad3a5f 5 BKE_main_collection_sync layer.c 828 0x558966ad3ae5 6 BKE_main_collection_sync_remap layer.c 853 0x558966ad3dd1 7 BKE_collections_child_remove_nulls collection.c 682 0x55896666f0cd 8 libblock_remap_data_postprocess_collection_update library_remap.c 337 0x55896688a06a 9 BKE_libblock_relink_ex library_remap.c 637 0x55896688b92b 10 BKE_libblock_free_ex library_remap.c 925 0x55896688c749 11 BKE_libblock_free library_remap.c 953 0x55896688c83e 12 ED_scene_delete scene_edit.c 117 0x5589651343f9 13 scene_delete_exec scene_edit.c 244 0x558965134bf1 14 wm_operator_invoke wm_event_system.c 1333 0x55896424b02c 15 wm_operator_call_internal wm_event_system.c 1530 0x55896424c015 16 WM_operator_name_call_ptr wm_event_system.c 1578 0x55896424c2a4 17 ui_apply_but_funcs_after interface_handlers.c 767 0x558964a56142 18 ui_handler_region_menu interface_handlers.c 9793 0x558964a9f341 19 wm_handler_ui_call wm_event_system.c 569 0x558964245448 20 wm_handlers_do_intern wm_event_system.c 2386 0x558964251521 ... <plus> ```
Bastien Montagne self-assigned this 2018-10-24 15:17:22 +02:00
Author
Owner

Added subscribers: @mont29, @MalDuffin

Added subscribers: @mont29, @MalDuffin

This issue was referenced by f887dc1f5c

This issue was referenced by f887dc1f5c8414f3a5ad6927730a3a74684ddf26
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57372
No description provided.